# linalg

./: CMakeLists.txt
include/: vec.hpp
test/: CMakeLists.txt  vec_constexpr_test.cpp  vec_test.cpp
